--- a/package.json
+++ b/package.json
@@ -1,25 +1,47 @@
 {
-  "name": "satory-experiment",
+  "name": "@open-sauced/opengraph.opensauced.pizza",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "keywords": [],
+  "description": "OpenGraph dot Open Sauced is a general purpose social card generator",
+  "author": "Ahmed Mohamed Atwa <Ahmedatwa866@yahoo.com>",
+  "private": true,
+  "license": "MIT",
+  "homepage": "https://github.com/open-sauced/opengraph.opensauced.pizza#readme",
+  "bugs": {
+    "url": "https://github.com/open-sauced/opengraph.opensauced.pizza/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/open-sauced/opengraph.opensauced.pizza.git"
+  },
+  "engines": {
+    "node": ">= 18.15",
+    "npm": ">= 9.2"
+  },
   "scripts": {
+    "types:auto-add": "npx typesync",
+    "types:auto-check": "npm run types:auto-add -- --dry",
+    "push": "npx @open-sauced/conventional-commit",
+    "preinstall": "npx @open-sauced/check-engines",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build",
     "dev": "nodemon src/index.ts"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.14.2",
-    "satori": "^0.4.0",
-    "typescript": "^4.9.5"
+    "@open-sauced/check-engines": "^1.2.0",
+    "@open-sauced/conventional-commit": "^1.0.1",
+    "@types/node": "^18.15.3",
+    "eslint": "^8.36.0",
+    "rimraf": "^4.4.0",
+    "satori": "^0.4.3",
+    "typescript": "^4.9.5",
+    "typesync": "^0.10.0"
   },
   "dependencies": {
     "@resvg/resvg-js": "^2.4.1",
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.21",
     "satori-html": "^0.3.2",
     "string-to-react": "^1.0.2",
     "ts-node": "^10.9.1"
