--- a/package.json
+++ b/package.json
@@ -23,27 +23,39 @@
     "types:auto-check": "npm run types:auto-add -- --dry",
     "push": "npx @open-sauced/conventional-commit",
     "preinstall": "npx @open-sauced/check-engines",
+    "eslint": "npx eslint",
+    "lint": "npm run eslint -- . --ext .ts,.js",
+    "format": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build",
-    "dev": "nodemon src/index.ts"
+    "start:dev": "ts-node ./src/index.ts"
   },
   "devDependencies": {
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "eslint": "^8.36.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-no-use-extend-native": "^0.5.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "rimraf": "^4.4.0",
     "satori": "^0.4.3",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5",
     "typesync": "^0.10.0"
   },
   "dependencies": {
     "@resvg/resvg-js": "^2.4.1",
-    "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
     "satori-html": "^0.3.2",
-    "string-to-react": "^1.0.2",
-    "ts-node": "^10.9.1"
+    "string-to-react": "^1.0.2"
   }
 }
