--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "module": "node16",
-    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
     "esModuleInterop": true,
-    "target": "ES2022",
-    "lib": ["esnext", "dom"],
-    "baseUrl": ".",
-    "skipLibCheck": true
-  }
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+  },
 }
