--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
-    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
+    "@types/follow-redirects": "^1.14.1",
     "@types/node": "^18.15.3",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
@@ -54,8 +54,8 @@
   },
   "dependencies": {
     "@resvg/resvg-js": "^2.4.1",
-    "axios": "^1.3.4",
     "express": "^4.18.2",
+    "follow-redirects": "^1.15.2",
     "nodemon": "^2.0.21",
     "satori-html": "^0.3.2",
     "string-to-react": "^1.0.2"
