--- a/package.json
+++ b/package.json
@@ -23,39 +23,105 @@
     "types:auto-check": "npm run types:auto-add -- --dry",
     "push": "npx @open-sauced/conventional-commit",
     "preinstall": "npx @open-sauced/check-engines",
+    "nest": "npx nest",
+    "start": "npm run nest -- start",
+    "start:dev": "npm run start -- --watch",
+    "start:debug": "npm run start:dev -- --debug",
+    "start:prod": "node dist/main",
+    "prebuild": "npx rimraf dist",
+    "build": "npm run nest -- build",
     "eslint": "npx eslint",
     "lint": "npm run eslint -- . --ext .ts,.js",
     "format": "npm run lint -- --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build",
-    "start:dev": "npx tsx watch ./src"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docs": "npx compodoc -p tsconfig.json --hideGenerator --disableDependencies -d ./dist/documentation ./src",
+    "docs:serve": "npm run docs -- --serve"
+  },
+  "dependencies": {
+    "@fastify/express": "^2.3.0",
+    "@fastify/helmet": "^10.1.0",
+    "@fastify/rate-limit": "^8.0.0",
+    "@fastify/static": "^6.9.0",
+    "@nestjs/axios": "^2.0.0",
+    "@nestjs/common": "^9.3.12",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.12",
+    "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/platform-fastify": "^9.3.12",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/terminus": "^9.2.2",
+    "@resvg/resvg-js": "^2.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "github-colors": "github:ozh/github-colors",
+    "nestjs-pino": "^3.1.2",
+    "pino-http": "^8.3.3",
+    "pino-pretty": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "satori-html": "^0.3.2",
+    "semver": "^7.3.8",
+    "string-to-react": "^1.0.2"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.19",
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.18.0",
+    "@nestjs/cli": "^9.3.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.12",
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
+    "@swc/core": "^1.3.32",
+    "@types/eslint": "^8.21.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
+    "@types/jest": "29.5.0",
+    "@types/node": "18.15.11",
+    "@types/rimraf": "^3.0.2",
+    "@types/semver": "^7.3.13",
+    "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "rimraf": "^4.4.0",
-    "satori": "^0.4.3",
+    "jest": "29.5.0",
+    "rimraf": "^4.4.1",
+    "satori": "^0.4.4",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "29.0.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "4.1.2",
     "tslib": "^2.5.0",
-    "tsx": "^3.12.5",
+    "tsx": "^3.12.6",
     "typescript": "^4.9.5",
     "typesync": "^0.10.0"
   },
-  "dependencies": {
-    "@resvg/resvg-js": "^2.4.1",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.21",
-    "satori-html": "^0.3.2",
-    "string-to-react": "^1.0.2"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
