feat: switch to graphql and etl octokit

--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
     "@nestjs/platform-fastify": "^9.3.12",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/terminus": "^9.2.2",
+    "@octokit/graphql": "^5.0.5",
+    "@octokit/graphql-schema": "^13.9.0",
     "@resvg/resvg-js": "^2.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "github-colors": "github:ozh/github-colors",
     "nestjs-pino": "^3.1.2",
+    "octokit": "^2.0.14",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0",
     "reflect-metadata": "^0.1.13",
