test: correct test suite usage

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "eslint": "npx eslint",
     "lint": "npm run eslint -- . --ext .ts,.js",
     "format": "npm run lint -- --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "echo 'Error: test configuration not specified' && exit 0",
+    "test:watch": "npm run test --watch",
+    "test:cov": "npm run test --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "npm run test --config test/jest-e2e.json",
     "docs": "npx compodoc -p tsconfig.json --hideGenerator --disableDependencies -d ./dist/documentation ./src",
     "docs:serve": "npm run docs -- --serve"
   },
