--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@fastify/helmet": "^10.1.0",
     "@fastify/rate-limit": "^8.0.0",
     "@fastify/static": "^6.9.0",
-    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/inter": "^4.5.15",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
