--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "docs:serve": "npm run docs -- --serve"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.306.0",
     "@fastify/express": "^2.3.0",
     "@fastify/helmet": "^10.1.0",
     "@fastify/rate-limit": "^8.0.0",
