--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@resvg/resvg-js": "^2.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fastify": "^4.15.0",
     "nestjs-pino": "^3.1.2",
     "octokit": "^2.0.14",
     "pino-http": "^8.3.3",
@@ -81,13 +82,12 @@
     "@open-sauced/conventional-commit": "^1.0.1",
     "@swc/core": "^1.3.32",
     "@types/eslint": "^8.21.0",
-    "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.13",
+    "@types/source-map-support": "^0.5.6",
     "@types/supertest": "^2.0.12",
-    "@types/validator": "^13.7.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
