--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "npm run test --config test/jest-e2e.json",
     "test:local:user": "npx ts-node test/local-dev/UserCards",
+    "test:local:highlight": "npx ts-node test/local-dev/HighlightCards",
     "docs": "npx compodoc -p tsconfig.json --hideGenerator --disableDependencies -d ./dist/documentation ./src",
     "docs:serve": "npm run docs -- --serve"
   },
