chore: add test script for insights

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test:e2e": "npm run test --config test/jest-e2e.json",
     "test:local:user": "npx ts-node test/local-dev/UserCards",
     "test:local:highlight": "npx ts-node test/local-dev/HighlightCards",
+    "test:local:insight": "npx ts-node test/local-dev/InsightCards",
     "docs": "npx compodoc -p tsconfig.json --hideGenerator --disableDependencies -d ./dist/documentation ./src",
     "docs:serve": "npm run docs -- --serve"
   },
