fix: improve performance when generating highlight card image

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DISK_PERCENTAGE=0.7
 DISK_SIZE=100
 NODE_ENV=development
 API_CODENAME=opengraph-local
+API_BASE_URL=https://beta.api.opensauced.pizza
 
 # Github
 GITHUB_PAT_USER=
