--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "pino-pretty": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "sanitize-html": "^2.11.0",
     "satori": "^0.4.7",
     "satori-html": "^0.3.2",
     "semver": "^7.4.0",
@@ -89,6 +90,7 @@
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/rimraf": "^3.0.2",
+    "@types/sanitize-html": "^2.9.0",
     "@types/semver": "^7.3.13",
     "@types/source-map-support": "^0.5.6",
     "@types/supertest": "^2.0.12",
