fix: update GitHub release workflow to use generated token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,10 +110,18 @@ jobs:
       - docker
     runs-on: ubuntu-latest
     steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.OS_GITHUB_APP_ID }}
+          private_key: ${{ secrets.OS_GITHUB_APP_PRIVATE_KEY }}
+      
       - name: "☁️ checkout repository"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          token: ${{ steps.generate_token.outputs.token }}
 
       - name: "♻️ clean up artifact paths"
         run: |
@@ -141,7 +149,7 @@ jobs:
         id: semantic-release
         uses: open-sauced/release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
 
   deploy:
     if: github.event.repository.default_branch == github.ref_name
